--- a/app/views/vehicles/model.html.erb
+++ b/app/views/vehicles/model.html.erb
@@ -11,7 +11,8 @@ search vehicle:
 
 <% if @vehicles %>
  <% @vehicles.each do |vehicle| %>
- <p><%=vehicle.model %></p>
+<p> <%= str=vehicle.model.upcase %> </p>
+ 
  
 <% end %> 
 <% end %>
